[package]
name = "vm"
version = "0.1.0"
edition = "2021"

[features]
default = ["debugger"]
debugger = ["dep:crossterm", "dep:ratatui"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
crossterm = { version = "0.28.1", optional = true }
rand = "0.8.5"
ratatui = { version = "0.29.0", optional = true }
